test/neg/bug228.scala
import java.lang.reflect.AccessibleObject;

class Test extends AccessibleObject {

  val o = new AccessibleObject;

}

class Foo {

  val o = new AccessibleObject;

}
